@@ -1,4 +1,8 @@
                                                          -*- coding: utf-8 -*-
+Changes with Apache Traffic Server 3.0.3
+  *) [TS-1047] fix lots of spelling mistakes
+   Author: Arno Töll
+
 Changes with Apache Traffic Server 3.0.2
   *) [TS-1030] Improve hashing mechanism on WKS.
 
